package chapter3;

public interface Beverage {

    String getDescription();

    double getCost();
}
